--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 CLIENT_ID=714430258501-pfs3l8e08r7qr6gr29pbvjfsboben75r.apps.googleusercontent.com
 CLIENT_SECRET=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
 REDIRECT_URL=http://localhost:3000/auth/google/callback
+PORT=3001
