--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "google-auth-library": "^8.7.0"
+    "google-auth-library": "^8.7.0",
+    "googleapis": "^110.0.0",
+    "open": "^8.4.0",
+    "server-destroy": "^1.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
